tests/health/gold/sdk/tests__lsp__return-label-completion-test.toit.gold
tests/lsp/return-label-completion-test.toit:16:12: error: Unresolved label 'foo'
  continue.foo
           ^~~
